WhileVisualizer/compiler/simpleir/SimpleIRParser.py
# Generated from SimpleIR.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing import TextIO




class SimpleIRParser ( Parser ):

    grammarFileName = "SimpleIR.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'function'", "'localVariables'", "'parameters'", 
                     "'return'", "'end'", "':='", "'&'", "'call'", "':'", 
                     "'goto'", "'if'", "<INVALID>", "<INVALID>", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'='", "'!='", "'<'", "'<='", 
                     "'>'", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "NAME", "NUM", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", 
                      "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "WS", "COMMENT" ]

    RULE_unit = 0
    RULE_function = 1
    RULE_statementList = 2
    RULE_localVariables = 3
    RULE_parameters = 4
    RULE_returnStatement = 5
    RULE_end = 6
    RULE_statement = 7
    RULE_operation = 8
    RULE_assign = 9
    RULE_dereference = 10
    RULE_reference = 11
    RULE_assignDereference = 12
    RULE_call = 13
    RULE_label = 14
    RULE_gotoStatement = 15
    RULE_ifGoto = 16

    ruleNames =  [ "unit", "function", "statementList", "localVariables", 
                   "parameters", "returnStatement", "end", "statement", 
                   "operation", "assign", "dereference", "reference", "assignDereference", 
                   "call", "label", "gotoStatement", "ifGoto" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    NAME=12
    NUM=13
    PLUS=14
    MINUS=15
    STAR=16
    SLASH=17
    PERCENT=18
    EQ=19
    NEQ=20
    LT=21
    LTE=22
    GT=23
    GTE=24
    WS=25
    COMMENT=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class UnitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self):
            return self.getTypedRuleContext(SimpleIRParser.FunctionContext,0)


        def getRuleIndex(self):
            return SimpleIRParser.RULE_unit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnit" ):
                listener.enterUnit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnit" ):
                listener.exitUnit(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUnit" ):
                return visitor.visitUnit(self)
            else:
                return visitor.visitChildren(self)




    def unit(self):

        localctx = SimpleIRParser.UnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_unit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.function()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.functionName = None # Token

        def returnStatement(self):
            return self.getTypedRuleContext(SimpleIRParser.ReturnStatementContext,0)


        def end(self):
            return self.getTypedRuleContext(SimpleIRParser.EndContext,0)


        def NAME(self):
            return self.getToken(SimpleIRParser.NAME, 0)

        def localVariables(self):
            return self.getTypedRuleContext(SimpleIRParser.LocalVariablesContext,0)


        def parameters(self):
            return self.getTypedRuleContext(SimpleIRParser.ParametersContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleIRParser.StatementContext)
            else:
                return self.getTypedRuleContext(SimpleIRParser.StatementContext,i)


        def getRuleIndex(self):
            return SimpleIRParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = SimpleIRParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            self.match(SimpleIRParser.T__0)
            self.state = 37
            localctx.functionName = self.match(SimpleIRParser.NAME)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleIRParser.T__1:
                self.state = 38
                self.localVariables()


            self.state = 42
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SimpleIRParser.T__2:
                self.state = 41
                self.parameters()


            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleIRParser.T__9) | (1 << SimpleIRParser.T__10) | (1 << SimpleIRParser.NAME) | (1 << SimpleIRParser.STAR))) != 0):
                self.state = 44
                self.statement()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.returnStatement()
            self.state = 51
            self.end()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SimpleIRParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleIRParser.StatementContext)
            else:
                return self.getTypedRuleContext(SimpleIRParser.StatementContext,i)


        def getRuleIndex(self):
            return SimpleIRParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self)
            else:
                return visitor.visitChildren(self)




    def statementList(self):

        localctx = SimpleIRParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleIRParser.T__9) | (1 << SimpleIRParser.T__10) | (1 << SimpleIRParser.NAME) | (1 << SimpleIRParser.STAR))) != 0):
                self.state = 53
                self.statement()
                self.state = 58
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self.match(SimpleIRParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LocalVariablesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variables = None # Token

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleIRParser.NAME)
            else:
                return self.getToken(SimpleIRParser.NAME, i)

        def getRuleIndex(self):
            return SimpleIRParser.RULE_localVariables

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocalVariables" ):
                listener.enterLocalVariables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocalVariables" ):
                listener.exitLocalVariables(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocalVariables" ):
                return visitor.visitLocalVariables(self)
            else:
                return visitor.visitChildren(self)




    def localVariables(self):

        localctx = SimpleIRParser.LocalVariablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_localVariables)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(SimpleIRParser.T__1)
            self.state = 63 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 62
                    localctx.variables = self.match(SimpleIRParser.NAME)

                else:
                    raise NoViableAltException(self)
                self.state = 65 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.formals = None # Token

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleIRParser.NAME)
            else:
                return self.getToken(SimpleIRParser.NAME, i)

        def getRuleIndex(self):
            return SimpleIRParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = SimpleIRParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_parameters)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(SimpleIRParser.T__2)
            self.state = 69 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 68
                    localctx.formals = self.match(SimpleIRParser.NAME)

                else:
                    raise NoViableAltException(self)
                self.state = 71 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.operand = None # Token

        def NAME(self):
            return self.getToken(SimpleIRParser.NAME, 0)

        def NUM(self):
            return self.getToken(SimpleIRParser.NUM, 0)

        def getRuleIndex(self):
            return SimpleIRParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)




    def returnStatement(self):

        localctx = SimpleIRParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_returnStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.match(SimpleIRParser.T__3)
            self.state = 74
            localctx.operand = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==SimpleIRParser.NAME or _la==SimpleIRParser.NUM):
                localctx.operand = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleIRParser.RULE_end

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnd" ):
                listener.enterEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnd" ):
                listener.exitEnd(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnd" ):
                return visitor.visitEnd(self)
            else:
                return visitor.visitChildren(self)




    def end(self):

        localctx = SimpleIRParser.EndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_end)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(SimpleIRParser.T__4)
            self.state = 77
            self.match(SimpleIRParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(SimpleIRParser.AssignContext,0)


        def dereference(self):
            return self.getTypedRuleContext(SimpleIRParser.DereferenceContext,0)


        def reference(self):
            return self.getTypedRuleContext(SimpleIRParser.ReferenceContext,0)


        def assignDereference(self):
            return self.getTypedRuleContext(SimpleIRParser.AssignDereferenceContext,0)


        def operation(self):
            return self.getTypedRuleContext(SimpleIRParser.OperationContext,0)


        def call(self):
            return self.getTypedRuleContext(SimpleIRParser.CallContext,0)


        def label(self):
            return self.getTypedRuleContext(SimpleIRParser.LabelContext,0)


        def gotoStatement(self):
            return self.getTypedRuleContext(SimpleIRParser.GotoStatementContext,0)


        def ifGoto(self):
            return self.getTypedRuleContext(SimpleIRParser.IfGotoContext,0)


        def getRuleIndex(self):
            return SimpleIRParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = SimpleIRParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.assign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.dereference()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.reference()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 82
                self.assignDereference()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.operation()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.call()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 85
                self.label()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 86
                self.gotoStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 87
                self.ifGoto()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variable = None # Token
            self.operand1 = None # Token
            self.operatorKind = None # Token
            self.operand2 = None # Token

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleIRParser.NAME)
            else:
                return self.getToken(SimpleIRParser.NAME, i)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleIRParser.NUM)
            else:
                return self.getToken(SimpleIRParser.NUM, i)

        def PLUS(self):
            return self.getToken(SimpleIRParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(SimpleIRParser.MINUS, 0)

        def STAR(self):
            return self.getToken(SimpleIRParser.STAR, 0)

        def SLASH(self):
            return self.getToken(SimpleIRParser.SLASH, 0)

        def PERCENT(self):
            return self.getToken(SimpleIRParser.PERCENT, 0)

        def getRuleIndex(self):
            return SimpleIRParser.RULE_operation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperation" ):
                listener.enterOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperation" ):
                listener.exitOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperation" ):
                return visitor.visitOperation(self)
            else:
                return visitor.visitChildren(self)




    def operation(self):

        localctx = SimpleIRParser.OperationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_operation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            localctx.variable = self.match(SimpleIRParser.NAME)
            self.state = 91
            self.match(SimpleIRParser.T__5)
            self.state = 92
            localctx.operand1 = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==SimpleIRParser.NAME or _la==SimpleIRParser.NUM):
                localctx.operand1 = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 93
            localctx.operatorKind = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SimpleIRParser.PLUS) | (1 << SimpleIRParser.MINUS) | (1 << SimpleIRParser.STAR) | (1 << SimpleIRParser.SLASH) | (1 << SimpleIRParser.PERCENT))) != 0)):
                localctx.operatorKind = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 94
            localctx.operand2 = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==SimpleIRParser.NAME or _la==SimpleIRParser.NUM):
                localctx.operand2 = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variable = None # Token
            self.operand = None # Token

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleIRParser.NAME)
            else:
                return self.getToken(SimpleIRParser.NAME, i)

        def NUM(self):
            return self.getToken(SimpleIRParser.NUM, 0)

        def getRuleIndex(self):
            return SimpleIRParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = SimpleIRParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            localctx.variable = self.match(SimpleIRParser.NAME)
            self.state = 97
            self.match(SimpleIRParser.T__5)
            self.state = 98
            localctx.operand = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==SimpleIRParser.NAME or _la==SimpleIRParser.NUM):
                localctx.operand = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DereferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variable = None # Token
            self.operand = None # Token

        def STAR(self):
            return self.getToken(SimpleIRParser.STAR, 0)

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleIRParser.NAME)
            else:
                return self.getToken(SimpleIRParser.NAME, i)

        def getRuleIndex(self):
            return SimpleIRParser.RULE_dereference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDereference" ):
                listener.enterDereference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDereference" ):
                listener.exitDereference(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDereference" ):
                return visitor.visitDereference(self)
            else:
                return visitor.visitChildren(self)




    def dereference(self):

        localctx = SimpleIRParser.DereferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_dereference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            localctx.variable = self.match(SimpleIRParser.NAME)
            self.state = 101
            self.match(SimpleIRParser.T__5)
            self.state = 102
            self.match(SimpleIRParser.STAR)
            self.state = 103
            localctx.operand = self.match(SimpleIRParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variable = None # Token
            self.operand = None # Token

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleIRParser.NAME)
            else:
                return self.getToken(SimpleIRParser.NAME, i)

        def getRuleIndex(self):
            return SimpleIRParser.RULE_reference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReference" ):
                listener.enterReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReference" ):
                listener.exitReference(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReference" ):
                return visitor.visitReference(self)
            else:
                return visitor.visitChildren(self)




    def reference(self):

        localctx = SimpleIRParser.ReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_reference)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            localctx.variable = self.match(SimpleIRParser.NAME)
            self.state = 106
            self.match(SimpleIRParser.T__5)
            self.state = 107
            self.match(SimpleIRParser.T__6)
            self.state = 108
            localctx.operand = self.match(SimpleIRParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignDereferenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variable = None # Token
            self.operand = None # Token

        def STAR(self):
            return self.getToken(SimpleIRParser.STAR, 0)

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleIRParser.NAME)
            else:
                return self.getToken(SimpleIRParser.NAME, i)

        def NUM(self):
            return self.getToken(SimpleIRParser.NUM, 0)

        def getRuleIndex(self):
            return SimpleIRParser.RULE_assignDereference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignDereference" ):
                listener.enterAssignDereference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignDereference" ):
                listener.exitAssignDereference(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignDereference" ):
                return visitor.visitAssignDereference(self)
            else:
                return visitor.visitChildren(self)




    def assignDereference(self):

        localctx = SimpleIRParser.AssignDereferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignDereference)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(SimpleIRParser.STAR)
            self.state = 111
            localctx.variable = self.match(SimpleIRParser.NAME)
            self.state = 112
            self.match(SimpleIRParser.T__5)
            self.state = 113
            localctx.operand = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==SimpleIRParser.NAME or _la==SimpleIRParser.NUM):
                localctx.operand = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.variable = None # Token
            self.functionName = None # Token
            self.actuals = None # Token

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SimpleIRParser.NAME)
            else:
                return self.getToken(SimpleIRParser.NAME, i)

        def getRuleIndex(self):
            return SimpleIRParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = SimpleIRParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_call)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 115
            localctx.variable = self.match(SimpleIRParser.NAME)
            self.state = 116
            self.match(SimpleIRParser.T__5)
            self.state = 117
            self.match(SimpleIRParser.T__7)
            self.state = 118
            localctx.functionName = self.match(SimpleIRParser.NAME)
            self.state = 122
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 119
                    localctx.actuals = self.match(SimpleIRParser.NAME) 
                self.state = 124
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LabelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.labelName = None # Token

        def NAME(self):
            return self.getToken(SimpleIRParser.NAME, 0)

        def getRuleIndex(self):
            return SimpleIRParser.RULE_label

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLabel" ):
                listener.enterLabel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLabel" ):
                listener.exitLabel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLabel" ):
                return visitor.visitLabel(self)
            else:
                return visitor.visitChildren(self)




    def label(self):
